[tool.poetry]
name = "ray-info"
version = "0.1.0"
description = ""
authors = ["maxiee <maxieewong@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_info"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.30.0"
PyYAML = "^6.0"
feedparser = "^6.0.10"
peewee = "^3.15.4"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
jieba = "^0.42.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
